[Client] Improved message publisher to use a executor service